--- a/src/main/resources/templates/admin-list.html
+++ b/src/main/resources/templates/admin-list.html
@@ -334,6 +334,14 @@
                                                        placeholder="Username">
                                             </div>
                                             <div class="mb-3">
+                                                <label for="surname"
+                                                       class="form-label">Фамилия</label>
+                                                <input name="username" type="text"
+                                                       class="form-control"
+                                                       id="surname" th:field="*{surname}"
+                                                       placeholder="Фамилия">
+                                            </div>
+                                            <div class="mb-3">
                                                 <label for="age" class="form-label">Возраст</label>
                                                 <input name="age" type="number" class="form-control"
                                                        id="age"
@@ -346,7 +354,7 @@
                                                 <input name="password" type="password"
                                                        class="form-control"
                                                        id="password" th:field="*{password}"
-                                                       placeholder="Password">
+                                                       placeholder="Пароль">
                                             </div>
                                             <div>
                                                 <label for="roles" class="form-label">Role</label>
